アカウントアプリを実装

--- a/templates/accounts/division/delete.html
+++ b/templates/accounts/division/delete.html
@@ -3,8 +3,7 @@
 {% load static %}
 {% load django_bootstrap_breadcrumbs %}
 
-{% block customcss %}
-{% endblock customcss %}
+{% block customcss %}{% endblock customcss %}
 
 {% block breadcrumbs %}
     {{ block.super }}
@@ -13,14 +12,13 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
     <div class="mb-3">
-        <p><strong>{{object.name}}</strong>を削除しますか？</p>
+        <p>
+            <strong>{{object.name}}</strong>を削除しますか？</p>
         <p>削除すると、この担当に所属するユーザーの担当は空欄になります。</p>
     </div>
     <form action="" method="POST">{% csrf_token %}
         <input type="submit" value="削除" class="btn btn-danger">
         <a href="{% url 'accounts:division' %}" class="btn btn-secondary" tabindex="-1" role="button" aria-disabled="true">キャンセル</a>
     </form>
-</div>
 {% endblock content%}
