--- a/templates/accounts/base.html
+++ b/templates/accounts/base.html
@@ -1,15 +1,13 @@
 {% extends 'base.html' %}
 {% load django_bootstrap_breadcrumbs %}
-
-{% block customcss %}{% endblock customcss %}
-
+{% block customcss %}
+{% endblock customcss %}
 {% block title %}
     FairWind Portal
 {% endblock title %}
-
 {% block breadcrumbs %}
     {{ block.super }}
     {% breadcrumb "アカウント" "accounts:" %}
 {% endblock %}
-
-{%block content%}{%endblock content%}
+{% block content %}
+{% endblock content %}
