--- a/templates/accounts/division/list.html
+++ b/templates/accounts/division/list.html
@@ -2,8 +2,7 @@
 {% load static %}
 {% load django_bootstrap_breadcrumbs %}
 
-{% block customcss %}
-{% endblock customcss %}
+{% block customcss %}{% endblock customcss %}
 
 {% block breadcrumbs %}
     {{ block.super }}
@@ -11,21 +10,33 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
-    {% include 'components/messages.html' %}
-    <a href="{% url 'accounts:division_create' %}" class="btn btn-primary mb-3" tabindex="-1" role="button" aria-disabled="true">新規作成</a>
+    <a
+        href="{% url 'accounts:division_create' %}"
+        class="btn btn-primary mb-3"
+        tabindex="-1"
+        role="button"
+        aria-disabled="true">新規作成</a>
     <div class="row">
         {% for division in object_list %}
-        <div class="col-sm-12 mb-3">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">{{division.name}}</h5>
-                    <a href="{% url 'accounts:division_update' division.pk %}" class="btn btn-secondary" tabindex="-1" role="button" aria-disabled="true">編集</a>
-                    <a href="{% url 'accounts:division_delete' division.pk %}" class="btn btn-danger" tabindex="-1" role="button" aria-disabled="true">削除</a>
+            <div class="col-sm-12 mb-3">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">{{division.name}}</h5>
+                        <a
+                            href="{% url 'accounts:division_update' division.pk %}"
+                            class="btn btn-secondary"
+                            tabindex="-1"
+                            role="button"
+                            aria-disabled="true">編集</a>
+                        <a
+                            href="{% url 'accounts:division_delete' division.pk %}"
+                            class="btn btn-danger"
+                            tabindex="-1"
+                            role="button"
+                            aria-disabled="true">削除</a>
+                    </div>
                 </div>
             </div>
-        </div>
         {% endfor %}
     </div>
-</div>
 {% endblock content%}
