--- a/templates/accounts/group/update.html
+++ b/templates/accounts/group/update.html
@@ -3,8 +3,7 @@
 {% load static %}
 {% load django_bootstrap_breadcrumbs %}
 
-{% block customcss %}
-{% endblock customcss %}
+{% block customcss %}{% endblock customcss %}
 
 {% block breadcrumbs %}
     {{ block.super }}
@@ -13,7 +12,6 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
     <form action="" method="POST">{% csrf_token %}
         <div class="form-floating mb-3">
             {% render_field form.name class="form-control" placeholder="班名" %}
@@ -22,5 +20,4 @@
         <input type="submit" class="btn btn-primary" value="保存">
         <a href="{% url 'accounts:group' %}" class="btn btn-secondary" tabindex="-1" role="button" aria-disabled="true">キャンセル</a>
     </form>
-</div>
 {% endblock content%}
