--- a/templates/accounts/password_change.html
+++ b/templates/accounts/password_change.html
@@ -3,8 +3,7 @@
 {% load widget_tweaks %}
 {% load django_bootstrap_breadcrumbs %}
 
-{% block customcss %}
-{% endblock customcss %}
+{% block customcss %}{% endblock customcss %}
 
 {% block breadcrumbs %}
     {{ block.super }}
@@ -12,13 +11,12 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
     <p>
-        元のパスワードがわからない場合は、このフォームでパスワードを変更することはできません。
-        直接プラットフォーム担当に申し出てください。
+        元のパスワードがわからない場合は、このフォームでパスワードを変更することはできません。 直接プラットフォーム担当に申し出てください。
     </p>
     {{ context }}
-    <form method="POST" class="row g-3"> {% csrf_token %}
+    <form method="POST" class="row g-3">
+        {% csrf_token %}
         <div class="col-md-12">
             <div class="form-floating mb-3">
                 {% if form.old_password.errors %}
@@ -71,5 +69,4 @@
             <button type="submit" class="btn btn-primary">変更</button>
         </div>
     </form>
-</div>
 {% endblock content %}
