--- a/templates/accounts/user/list.html
+++ b/templates/accounts/user/list.html
@@ -2,8 +2,7 @@
 {% load django_bootstrap_breadcrumbs %}
 {% load static %}
 
-{% block customcss %}
-{% endblock customcss %}
+{% block customcss %}{% endblock customcss %}
 
 {% block breadcrumbs %}
     {{ block.super }}
@@ -11,7 +10,6 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
     {% if user.is_staff %}
         <a href="{% url 'accounts:users_import' %}" class="btn btn-primary mb-2">一括登録</a>
     {% endif %}
@@ -23,17 +21,16 @@
                 <th scope="col">姓</th>
                 <th scope="col">名</th>
             </tr>
-            </thead>
-            <tbody>
+        </thead>
+        <tbody>
             {% for user in object_list %}
-            <tr>
-                <!--<td scope="row">{{ user.id }}</td>-->
-                <td>{{ user.username }}</td>
-                <td>{{ user.last_name }}</td>
-                <td>{{ user.first_name }}</td>
-            </tr>
+                <tr>
+                    <!--<td scope="row">{{ user.id }}</td>-->
+                    <td>{{ user.username }}</td>
+                    <td>{{ user.last_name }}</td>
+                    <td>{{ user.first_name }}</td>
+                </tr>
             {% endfor %}
         </tbody>
     </table>
-</div>
 {% endblock content%}
