--- a/templates/base.html
+++ b/templates/base.html
@@ -1,68 +1,69 @@
 {% load django_bootstrap_breadcrumbs %}
 {% load startswith %}
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="ja">
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <meta name="robots" content="noindex">
-
         <!-- Bootstrap CSS -->
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-            crossorigin="anonymous"/>
-
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+              rel="stylesheet"
+              integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+              crossorigin="anonymous"/>
         <link rel="stylesheet" href="{% static 'style.css' %}">
-
         <!-- Bootstrap JavaScript -->
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
-
-        {% block head %}{% endblock %}
-
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        {% block head %}
+        {% endblock head %}
         <title>
-            {% block title %}{% endblock %}
+            {% block title %}
+            {% endblock title %}
         </title>
     </head>
-
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container container-fluid">
                 <a class="navbar-brand" href="{% url 'home' %}">FairWind Portal</a>
-                <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation">
+                <button class="navbar-toggler"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a {% if request.path == '/' %} class="nav-link" aria-current="page" {% else %} {% endif %} href="{% url 'home' %}">
-                                ホーム
-                            </a>
+                            {% if request.path == '/' %}
+                                <a class="nav-link active" aria-current="page" href="{% url 'home' %}">ホーム</a>
+                            {% else %}
+                                <a class="nav-link" href="{% url 'home' %}">ホーム</a>
+                            {% endif %}
+                        </li>
+                        <li class="nav-item">
+                            {% if request.path|startswith:'/accounts/' %}
+                                <a class="nav-link active"
+                                   aria-current="page"
+                                   href="{% url 'accounts:' %}">アカウント</a>
+                            {% else %}
+                                <a class="nav-link" href="{% url 'accounts:' %}">アカウント</a>
+                            {% endif %}
                         </li>
                         <li class="nav-item dropdown">
-                            <a
-                                class="nav-link dropdown-toggle"
-                                href="#"
-                                id="navbarDropdown"
-                                role="button"
-                                data-bs-toggle="dropdown"
-                                aria-expanded="false">
+                            <a class="nav-link dropdown-toggle"
+                               href="#"
+                               id="navbarDropdown"
+                               role="button"
+                               data-bs-toggle="dropdown"
+                               aria-expanded="false">
                                 Dropdown
                             </a>
-                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
+                            <ul class="dropdown-menu dropdown-menu-dark"
+                                aria-labelledby="navbarDropdown">
                                 <li>
                                     <a class="dropdown-item" href="#">Action</a>
                                 </li>
@@ -83,7 +84,8 @@
                     </ul>
                     <div class="d-flex justify-content-between">
                         {% if user.is_authenticated %}
-                            <a href="#" class="text-white text-decoration-none navbar-text">
+                            <a href="{% url 'accounts:' %}"
+                               class="text-white text-decoration-none navbar-text">
                                 {% if user.last_name and user.first_name %}
                                     {{ user.last_name }}
                                     {{ user.first_name }}
@@ -96,9 +98,9 @@
                         {% endif %}
                         <div class="ms-3">
                             {% if user.is_authenticated %}
-                                <a href="#" class="btn btn-outline-light">ログアウト</a>
+                                <a href="{% url 'accounts:logout' %}" class="btn btn-outline-light">ログアウト</a>
                             {% else %}
-                                <a href="#" class="btn btn-primary">ログイン</a>
+                                <a href="{% url 'accounts:login' %}" class="btn btn-primary">ログイン</a>
                             {% endif %}
                         </div>
                     </div>
@@ -114,13 +116,11 @@
                 {% render_breadcrumbs 'breadcrumbs.html' %}
             </div>
         </div>
-
         <div class="container">
             {% include 'components/messages.html' %}
-
-            {% block content %}{% endblock %}
+            {% block content %}
+            {% endblock content %}
         </div>
-
         {% include 'toast.html' %}
     </body>
 </html>
