--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% load static %}
-
 {% block head %}
     <style>
         form input[type="text"] {
@@ -20,23 +19,23 @@
         }
     </style>
 {% endblock %}
-
 {% block title %}
     FairWind Portal
-{% endblock %}
-
+{% endblock title %}
 {% block content %}
-
     {% if user.is_authenticated %}
         <div class="p-3 mb-4 bg-light rounded-3">
             <div class="container-fluid py-5">
                 <h1 class="display-5 fw-bold mb-4">地方高校生に、追い風を</h1>
-                <a class="btn btn-primary btn-lg" href="https://fairwind-ut.com/" target="_blank">公式ウェブサイト</a>
+                <a class="btn btn-primary btn-lg"
+                   href="https://fairwind-ut.com/"
+                   target="_blank">公式ウェブサイト</a>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-6">
-                <a href="#" class="btn btn-outline-dark d-flex flex-column py-3 mb-3">
+                <a href="{% url 'accounts:' %}"
+                   class="btn btn-outline-dark d-flex flex-column py-3 mb-3">
                     <div>アカウント</div>
                 </a>
             </div>
@@ -44,22 +43,28 @@
     {% else %}
         <div class="row align-items-center g-lg-5 py-4">
             <div class="col-lg-7 text-center text-lg-start mb-4">
-                <h1 class="display-4 fw-bold lh-1 mb-3">
-                    地方高校生に、追い風を
-                </h1>
-                <p class="col-lg-10 fs-4">
-                    FairWind Portal にログイン
-                </p>
+                <h1 class="display-4 fw-bold lh-1 mb-3">地方高校生に、追い風を</h1>
+                <p class="col-lg-10 fs-4">FairWind Portal にログイン</p>
             </div>
             <div class="col-md-10 mx-auto col-lg-5">
-                <form class="p-4 p-md-5 border rounded-3 bg-light" action="#" method="POST">
+                <form class="p-4 p-md-5 border rounded-3 bg-light"
+                      action="{% url 'accounts:login' %}"
+                      method="POST">
                     {% csrf_token %}
                     <div class="form-floating">
-                        <input type="text" class="form-control" id="floatingInput" placeholder="ユーザー名" name="username">
+                        <input type="text"
+                               class="form-control"
+                               id="floatingInput"
+                               placeholder="ユーザー名"
+                               name="username">
                         <label for="floatingInput">ユーザー名</label>
                     </div>
                     <div class="form-floating mb-4">
-                        <input type="password" class="form-control" id="floatingPassword" placeholder="パスワード" name="password">
+                        <input type="password"
+                               class="form-control"
+                               id="floatingPassword"
+                               placeholder="パスワード"
+                               name="password">
                         <label for="floatingPassword">パスワード</label>
                     </div>
                     <button class="w-100 btn btn-lg btn-primary" type="submit">ログイン</button>
@@ -67,5 +72,4 @@
             </div>
         </div>
     {% endif %}
-
-{% endblock content%}
+{% endblock content %}
