--- a/templates/events/school/list.html
+++ b/templates/events/school/list.html
@@ -19,8 +19,8 @@
                    placeholder="キーワードを入力"
                    aria-label="検索ワード"
                    value="{{ request.GET.search }}"
-                   name="search">
-            <button class="btn btn-primary" type="button" id="btn-search">検索</button>
+                   name="search"/>
+            <button class="btn btn-primary" type="submit" id="btn-search">検索</button>
         </div>
     </form>
     <table class="table">
