--- a/templates/events/edit.html
+++ b/templates/events/edit.html
@@ -26,7 +26,7 @@
 
         <div class="col-12 mb-3">
             <button type="submit"
-                    class="btn btn-primary">登録</button>
+                    class="btn btn-primary">更新</button>
         </div>
     </form>
 {% endblock content %}
