企画一覧を実装

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,18 +1,22 @@
 {% load django_bootstrap_breadcrumbs %}
 {% load startswith %}
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="ja">
     <head>
         <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <meta name="robots" content="noindex">
+        <meta name="viewport"
+              content="width=device-width, initial-scale=1"/>
+        <meta name="robots"
+              content="noindex">
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
               rel="stylesheet"
               integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
               crossorigin="anonymous"/>
-        <link rel="stylesheet" href="{% static 'style.css' %}">
+        <link rel="stylesheet"
+              href="{% static 'style.css' %}">
         <!-- Bootstrap JavaScript -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         {% block head %}
@@ -25,7 +29,8 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container container-fluid">
-                <a class="navbar-brand" href="{% url 'home' %}">FairWind Portal</a>
+                <a class="navbar-brand"
+                   href="{% url 'home' %}">FairWind Portal</a>
                 <button class="navbar-toggler"
                         type="button"
                         data-bs-toggle="collapse"
@@ -35,13 +40,27 @@
                         aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse"
+                     id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             {% if request.path == '/' %}
-                                <a class="nav-link active" aria-current="page" href="{% url 'home' %}">ホーム</a>
+                                <a class="nav-link active"
+                                   aria-current="page"
+                                   href="{% url 'home' %}">ホーム</a>
                             {% else %}
-                                <a class="nav-link" href="{% url 'home' %}">ホーム</a>
+                                <a class="nav-link"
+                                   href="{% url 'home' %}">ホーム</a>
+                            {% endif %}
+                        </li>
+                        <li class="nav-item">
+                            {% if request.path|startswith:'/events/' %}
+                                <a class="nav-link active"
+                                   aria-current="page"
+                                   href="{% url 'events:' %}">企画</a>
+                            {% else %}
+                                <a class="nav-link"
+                                   href="{% url 'events:' %}">企画</a>
                             {% endif %}
                         </li>
                         <li class="nav-item">
@@ -50,7 +69,8 @@
                                    aria-current="page"
                                    href="{% url 'accounts:' %}">アカウント</a>
                             {% else %}
-                                <a class="nav-link" href="{% url 'accounts:' %}">アカウント</a>
+                                <a class="nav-link"
+                                   href="{% url 'accounts:' %}">アカウント</a>
                             {% endif %}
                         </li>
                         <li class="nav-item dropdown">
@@ -65,21 +85,27 @@
                             <ul class="dropdown-menu dropdown-menu-dark"
                                 aria-labelledby="navbarDropdown">
                                 <li>
-                                    <a class="dropdown-item" href="#">Action</a>
+                                    <a class="dropdown-item"
+                                       href="#">Action</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="#">Another action</a>
+                                    <a class="dropdown-item"
+                                       href="#">Another action</a>
                                 </li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="#">Something else here</a>
+                                    <a class="dropdown-item"
+                                       href="#">Something else here</a>
                                 </li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                            <a class="nav-link disabled"
+                               href="#"
+                               tabindex="-1"
+                               aria-disabled="true">Disabled</a>
                         </li>
                     </ul>
                     <div class="d-flex justify-content-between">
@@ -98,16 +124,19 @@
                         {% endif %}
                         <div class="ms-3">
                             {% if user.is_authenticated %}
-                                <a href="{% url 'accounts:logout' %}" class="btn btn-outline-light">ログアウト</a>
+                                <a href="{% url 'accounts:logout' %}"
+                                   class="btn btn-outline-light">ログアウト</a>
                             {% else %}
-                                <a href="{% url 'accounts:login' %}" class="btn btn-primary">ログイン</a>
+                                <a href="{% url 'accounts:login' %}"
+                                   class="btn btn-primary">ログイン</a>
                             {% endif %}
                         </div>
                     </div>
                 </div>
             </div>
         </nav>
-        <div class="pt-3 mb-3 border-bottom" aria-label="breadcrumb">
+        <div class="pt-3 mb-3 border-bottom"
+             aria-label="breadcrumb">
             <div class="container">
                 {% block breadcrumbs %}
                     {% clear_breadcrumbs %}
@@ -117,10 +146,14 @@
             </div>
         </div>
         <div class="container">
+
             {% include 'components/messages.html' %}
+
             {% block content %}
             {% endblock content %}
         </div>
+
         {% include 'toast.html' %}
+
     </body>
 </html>
