学校DB更新時にCSVのエンコードを指定できるように

--- a/templates/events/school/db_update.html
+++ b/templates/events/school/db_update.html
@@ -1,7 +1,10 @@
 {% extends "events/base.html" %}
+
 {% load widget_tweaks %}
+
 {% load django_bootstrap_breadcrumbs %}
 {% load static %}
+
 {% block head %}
 {% endblock head %}
 {% block breadcrumbs %}
@@ -14,23 +17,32 @@
         文部科学省が定めている「学校コード」のデータをもとにデータベースを更新します。
         文部科学省のウェブサイト上にある2つのCSVファイルのURLを入力してください。
     </p>
-    <form action="" method="post" class="row g-3 mb-3">
+    <form action=""
+          method="post"
+          class="row g-3 mb-3">
         {% csrf_token %}
         {% for error in errors %}<div class="alert alert-danger mb-0">{{ error }}</div>{% endfor %}
-        <div class="col-md-6">
+        <div class="col-md-5">
             <div class="form-floating mb-3">
                 {% render_field form.file_url_east class="form-control" placeholder="東日本" %}
                 <label for="id_file_url_east">東日本</label>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-5">
             <div class="form-floating mb-3">
                 {% render_field form.file_url_west class="form-control" placeholder="西日本" %}
                 <label for="id_file_url_west">西日本</label>
             </div>
         </div>
+        <div class="col-md-2">
+            <div class="form-floating mb-3">
+                {% render_field form.encoding class="form-select" %}
+                <label for="id_encoding">エンコード</label>
+            </div>
+        </div>
         <div class="col-12 mb-3">
-            <button type="submit" class="btn btn-primary">登録</button>
+            <button type="submit"
+                    class="btn btn-primary">登録</button>
         </div>
     </form>
 {% endblock content %}
