文言を修正

--- a/templates/events/event_form.html
+++ b/templates/events/event_form.html
@@ -44,7 +44,7 @@
     <div class="card">
         <div class="card-body">
             <div class="card-title">対象校</div>
-            {% render_field form.school class="form-control suggest" placeholder="参加者を検索" aria-describedby="participantsHelp" %}
+            {% render_field form.school class="form-control suggest" placeholder="対象校を検索" aria-describedby="participantsHelp" %}
             <div id="participantsHelp"
                  class="form-text">
                 学校名を入力すると、候補を表示します。
