--- a/templates/events/event_form.html
+++ b/templates/events/event_form.html
@@ -58,7 +58,7 @@
     <div class="card">
         <div class="card-body">
             <div class="card-title">管理者</div>
-            {% render_field form.admin class="form-control suggest" placeholder="参加者を検索" aria-describedby="participantsHelp" %}
+            {% render_field form.admin class="form-control suggest" placeholder="管理者を検索" aria-describedby="participantsHelp" %}
             <div id="participantsHelp"
                  class="form-text">
                 姓のローマ字表記から始まるユーザー名を入力すると、候補を表示します。
