--- a/templates/accounts/password_change.html
+++ b/templates/accounts/password_change.html
@@ -1,72 +1,23 @@
 {% extends 'accounts/base.html' %}
+
 {% load static %}
+
 {% load widget_tweaks %}
 {% load django_bootstrap_breadcrumbs %}
+{% load django_bootstrap5 %}
 
-{% block customcss %}{% endblock customcss %}
-
+{% block customcss %}
+{% endblock customcss %}
 {% block breadcrumbs %}
     {{ block.super }}
     {% breadcrumb "パスワード変更" "accounts:password_change" %}
 {% endblock %}
-
 {% block content %}
-    <p>
-        元のパスワードがわからない場合は、このフォームでパスワードを変更することはできません。 直接プラットフォーム担当に申し出てください。
-    </p>
+    <p>元のパスワードがわからない場合は、このフォームでパスワードを変更することはできません。 直接プラットフォーム担当に申し出てください。</p>
     {{ context }}
-    <form method="POST" class="row g-3">
+    <form method="POST">
         {% csrf_token %}
-        <div class="col-md-12">
-            <div class="form-floating mb-3">
-                {% if form.old_password.errors %}
-                    {% render_field form.old_password class="form-control is-invalid" placeholder="元のパスワード" %}
-                    <label for="id_old_password">元のパスワード</label>
-                    {% for error in form.old_password.errors %}
-                        <div class="invalid-feedback">
-                            {{ error }}
-                        </div>
-                    {% endfor %}
-                {% else %}
-                    {% render_field form.old_password class="form-control" placeholder="元のパスワード" %}
-                    <label for="id_old_password">元のパスワード</label>
-                {% endif %}
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="form-floating mb-3">
-                {% if form.new_password1.errors %}
-                    {% render_field form.new_password1 class="form-control is-invalid" placeholder="新しいパスワード" %}
-                    <label for="id_new_password1">新しいパスワード</label>
-                    {% for error in form.new_password1.errors %}
-                        <div class="invalid-feedback">
-                            {{ error }}
-                        </div>
-                    {% endfor %}
-                {% else %}
-                    {% render_field form.new_password1 class="form-control" placeholder="新しいパスワード" %}
-                    <label for="id_new_password1">新しいパスワード</label>
-                {% endif %}
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="form-floating mb-3">
-                {% if form.new_password2.errors %}
-                    {% render_field form.new_password2 class="form-control is-invalid" placeholder="新しいパスワード（確認）" %}
-                    <label for="id_new_password2">新しいパスワード（確認）</label>
-                    {% for error in form.new_password2.errors %}
-                        <div class="invalid-feedback">
-                            {{ error }}
-                        </div>
-                    {% endfor %}
-                {% else %}
-                    {% render_field form.new_password2 class="form-control" placeholder="新しいパスワード（確認）" %}
-                    <label for="id_new_password2">新しいパスワード（確認）</label>
-                {% endif %}
-            </div>
-        </div>
-        <div class="col-12 mb-3">
-            <button type="submit" class="btn btn-primary">変更</button>
-        </div>
+        {% bootstrap_form form layout="floating" %}
+        {% bootstrap_button "変更" button_type="submit" %}
     </form>
 {% endblock content %}
