--- a/templates/events/create.html
+++ b/templates/events/create.html
@@ -4,6 +4,7 @@
 
 {% load widget_tweaks %}
 {% load django_bootstrap_breadcrumbs %}
+{% load django_bootstrap5 %}
 
 {% block head %}
     <link rel="stylesheet"
@@ -22,12 +23,8 @@
                 {% for error in forms.non_field_errors %}<div class="alert alert-danger">{{ error }}</div>{% endfor %}
             </div>
         {% endif %}
-
-        {% include 'events/event_form.html' %}
-
-        <div class="col-12 mb-3">
-            <button type="submit"
-                    class="btn btn-primary">登録</button>
-        </div>
-    </form>
+        {% bootstrap_form form layout="floating" %}
+        {% bootstrap_button "登録" button_type="submit" %}
+    </div>
+</form>
 {% endblock content %}
