--- a/templates/events/school/db_update.html
+++ b/templates/events/school/db_update.html
@@ -3,6 +3,7 @@
 {% load widget_tweaks %}
 
 {% load django_bootstrap_breadcrumbs %}
+{% load django_bootstrap5 %}
 {% load static %}
 
 {% block head %}
@@ -17,32 +18,9 @@
         文部科学省が定めている「学校コード」のデータをもとにデータベースを更新します。
         文部科学省のウェブサイト上にある2つのCSVファイルのURLを入力してください。
     </p>
-    <form action=""
-          method="post"
-          class="row g-3 mb-3">
+    <form method="post">
         {% csrf_token %}
-        {% for error in errors %}<div class="alert alert-danger mb-0">{{ error }}</div>{% endfor %}
-        <div class="col-md-5">
-            <div class="form-floating mb-3">
-                {% render_field form.file_url_east class="form-control" placeholder="東日本" %}
-                <label for="id_file_url_east">東日本</label>
-            </div>
-        </div>
-        <div class="col-md-5">
-            <div class="form-floating mb-3">
-                {% render_field form.file_url_west class="form-control" placeholder="西日本" %}
-                <label for="id_file_url_west">西日本</label>
-            </div>
-        </div>
-        <div class="col-md-2">
-            <div class="form-floating mb-3">
-                {% render_field form.encoding class="form-select" %}
-                <label for="id_encoding">エンコード</label>
-            </div>
-        </div>
-        <div class="col-12 mb-3">
-            <button type="submit"
-                    class="btn btn-primary">登録</button>
-        </div>
+        {% bootstrap_form form layout="floating" %}
+        {% bootstrap_button "更新" button_type="submit" %}
     </form>
 {% endblock content %}
