--- a/templates/accounts/group/create.html
+++ b/templates/accounts/group/create.html
@@ -1,23 +1,25 @@
 {% extends "accounts/base.html" %}
+
 {% load widget_tweaks %}
+
 {% load static %}
 {% load django_bootstrap_breadcrumbs %}
+{% load django_bootstrap5 %}
 
-{% block customcss %}{% endblock customcss %}
-
+{% block customcss %}
+{% endblock customcss %}
 {% block breadcrumbs %}
     {{ block.super }}
     {% breadcrumb "班" "accounts:group" %}
     {% breadcrumb "新規作成" "accounts:group_create" %}
 {% endblock %}
-
 {% block content %}
-    <form action="" method="POST">{% csrf_token %}
-        <div class="form-floating mb-3">
-            {% render_field form.name class="form-control" placeholder="班名" %}
-            <label for="id_name">班名</label>
-        </div>
-        <input type="submit" class="btn btn-primary" value="登録">
-        <a href="{% url 'accounts:group' %}" class="btn btn-secondary" tabindex="-1" role="button" aria-disabled="true">キャンセル</a>
+    <form method="POST">
+        {% csrf_token %}
+        {% bootstrap_form form layout="floating" %}
+        {% bootstrap_button "登録" button_type="submit" %}
+
+        {% include 'components/cancel.html' %}
+
     </form>
-{% endblock content%}
+{% endblock content %}
