--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 {% load django_bootstrap_breadcrumbs %}
 {% load startswith %}
+{% load django_bootstrap5 %}
 {% load static %}
 
 <!DOCTYPE html>
@@ -10,15 +11,10 @@
               content="width=device-width, initial-scale=1"/>
         <meta name="robots"
               content="noindex">
-        <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-              rel="stylesheet"
-              integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-              crossorigin="anonymous"/>
+        {% bootstrap_css %}
+        {% bootstrap_javascript %}
         <link rel="stylesheet"
               href="{% static 'style.css' %}">
-        <!-- Bootstrap JavaScript -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         {% block head %}
         {% endblock head %}
         <title>
@@ -145,7 +141,7 @@
                 {% render_breadcrumbs 'breadcrumbs.html' %}
             </div>
         </div>
-        <div class="container">
+        <div class="container mb-3">
 
             {% include 'components/messages.html' %}
 
